# sentinel-npm

./: .editorconfig  .gitignore  ADOPTION_DISTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  clippy.toml  rustfmt.toml
.github/workflows/: release.yml
scripts/: install.sh
src/: artifact_store_config.rs  cache.rs  cli_parsers.rs  crypto.rs  dependency_tree.rs  lib.rs  main.rs  output.rs
src/commands/: check.rs  history.rs  install.rs  mod.rs  shared.rs
src/commands/install/: history.rs  lockfile.rs  mod.rs  orchestration.rs  policy.rs  post_verify.rs  resolve.rs  source.rs
src/constants/: cache.rs  cli.rs  cli_parsers.rs  crypto.rs  install.rs  lockfile_check.rs  manager.rs  mod.rs  npm.rs  paths.rs  progress.rs  template.rs
src/constants/messages/: check.rs  cli.rs  history.rs  install.rs  main.rs  manager.rs  mod.rs  npm.rs  output.rs  report.rs  ui.rs  verifier.rs
src/ecosystem/: comparator.rs  executor.rs  lockfile.rs  manager.rs  mod.rs  registry.rs
src/history/: ledger.rs  mod.rs  path.rs  retention.rs  types.rs
src/npm/: dependency_tree.rs  lockfile.rs  mod.rs  package_json.rs  registry.rs
src/policy/: mod.rs
src/types/: check.rs  cli.rs  command_args.rs  crypto.rs  dependency_tree.rs  error.rs  executor.rs  history.rs  install.rs  lockfile.rs  lockfile_check.rs  manager.rs  mod.rs  npm.rs  output.rs  package.rs  policy.rs  report.rs  services.rs  shared_state.rs  verification.rs  verifier.rs
src/ui/: command_feedback.rs  history_output.rs  mod.rs  report_command.rs  report_output.rs  report_output_github.rs  report_output_json.rs  report_output_junit.rs  report_output_text.rs
src/utils/: helpers.rs  mod.rs  npm_project.rs  progress.rs  project_files.rs
src/verifier/: artifact_cleanup.rs  install_check.rs  lockfile_check.rs  memory_budget.rs  mod.rs
tests/: cli_commands_tests.rs  command_flows_tests.rs  crypto_tests.rs  dependency_tree_integration_tests.rs  dependency_tree_tests.rs  ecosystem_tests.rs  history_command_smoke_tests.rs  history_ledger_unit_tests.rs  history_retention_unit_tests.rs  report_command_tests.rs  transitive_verification_tests.rs
tests/common/: constants.rs  fixtures.rs  mod.rs  types.rs
tests/internal/: artifact_cleanup_tests.rs  artifact_store_config_tests.rs  command_args_tests.rs  crypto_internal_tests.rs  dependency_tree_tests.rs  install_check_internal_tests.rs  install_tests.rs  lockfile_tests.rs  memory_budget_tests.rs  npm_registry_internal_tests.rs  output_types_tests.rs  report_output_text_internal_tests.rs  shared_command_tests.rs  verifier_tests.rs
tests/internal/utils/tests/: fixtures.rs  mocks.rs
