[package]
name    = "sentinel"
version = "0.1.0"
edition = "2024"
description = "Supply chain security for npm — verify before you install"
license = "MIT"
repository = "https://github.com/SIG-sentinel/sentinel-npm"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
# CLI
clap         = { version = "4.5", features = ["derive", "env"] }
colored      = "2.1"
indicatif    = { version = "0.17", features = ["tokio"] }

# HTTP — rustls only, zero OpenSSL
reqwest      = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
tokio        = { version = "1.37", features = ["full"] }
futures-util = "0.3"
bytes        = "1.6"

# Hashing — pure Rust, zero system deps
sha2         = "0.10"
base64       = "0.22"
subtle       = "2.5"  # constant-time comparison

# JSON
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"

# Cache local
rusqlite     = { version = "0.31", features = ["bundled"] }

# Erros e utils
thiserror    = "1.0"
anyhow       = "1.0"
chrono       = { version = "0.4", features = ["serde"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs         = "5.0"

[dev-dependencies]
tokio = { version = "1.37", features = ["full", "test-util"] }
tempfile = "3.10"

[profile.release]
opt-level     = 3
strip         = "symbols"
lto           = "thin"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 1
